# rtosc

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile.in  README  README.adoc  librtosc-cpp.pc.cmake  librtosc.pc.cmake  librtosc_cpp.pc.cmake
.github/workflows/: ccpp.yml  yaml.yml
cmake/: ColorMessage.cmake
completions/: port-checker
doc/: Guide.adoc  Guide.txt
example/complex/: Fl_Osc_Button.H  Fl_Osc_Button.cpp  Fl_Osc_Dial.H  Fl_Osc_Dial.cpp  Fl_Osc_Interface.H  Fl_Osc_Slider.H  Fl_Osc_Slider.cpp  Fl_Osc_Tree.H  Fl_Osc_View.H  Fl_Osc_Widget.H  Fl_Undo_History.h  audio.cpp  osc.cpp  osc.h  synth.cpp  synth.h  util.h  window.cpp
example/modular/: Echo.cpp  Echo.h  Effect.h  EffectMgr.cpp  EffectMgr.h  LFO.cpp  LFO.h  Oscil.cpp  Oscil.h  Synth.cpp  Synth.h  main.cpp  util.h
example/simple/: synth.cpp  ui.cpp
include/: rtosc.h  thread-link.h
include/rtosc/: arg-ext.h  arg-val-cmp.h  arg-val-itr.h  arg-val-math.h  arg-val.h  automations.h  bundle-foreach.h  default-value.h  matcher.h  miditable.h  port-checker.h  port-sugar.h  ports-runtime.h  ports.h  pretty-format.h  rtosc-time.h  rtosc-version.h  rtosc.h  savefile.h  subtree-serialize.h  thread-link.h  typed-message.h  undo-history.h
src/: arg-val-cmp.c  arg-val-itr.c  arg-val-math.c  arg-val.c  dispatch.c  pretty-format.c  rtosc-time.c  rtosc.c  util.c  util.h  version.c.in
src/cpp/: arg-ext.c  arg-val-cmp.c  arg-val-math.c  arg-val.c  automations.cpp  default-value.cpp  midimapper.cpp  miditable.cpp  port-checker.cpp  ports-runtime.cpp  ports.cpp  pretty-format.c  savefile.cpp  subtree-serialize.cpp  thread-link.cpp  undo-history.cpp  util.h
test/: apropos.cpp  arg-val-cmp.c  arg-val-cmp.cpp  arg-val-math.c  arg-val-math.cpp  bundles.c  cmp-arg-vals.c  common.h  default-value.cpp  default-values.cpp  empty-strings.c  fat-message.c  headerlib.cpp  liblo-server.cpp  liblo-server.h  liblo.c  message-alignment.c  nested-bundles.c  null-messages.c  osc-spec.c  path-collapse.cpp  path-search.cpp  patterns.c  performance.cpp  port-checker-main.cpp  port-checker-testapp.cpp  port-checker-tester.cpp  port-checker.cpp  port-checker.h  port-cmp.cpp  pretty-format.c  pretty-format.cpp  pretty-printer.c  rtosc-time.c  serializer.cpp  simple-messages.c  sugar.cpp  test-arg-iter.c  test-automation.cpp  test-midi-mapper.cpp  (+9 more)
